DevOpsCheatsheets/vcluster/k8s/argocd/argo-gRPC-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: argogrpc.demos.kubiya.ai
  tls:
  - hosts:
    - argogrpc.demos.kubiya.ai
    secretName: argocd-ingress-grpc
